# rk3568_rknn_rtmp

./: CMakeLists.txt  README  README.md  build-linux_RK356X.sh  com_server.py  performance.sh  rtmp_sample.h264  yolov5.sh
include/: MyEncoder.h  encoder_api.h  mpi_enc_utils.h  rga_func.h  simple_rtmp_pusher.h  yolo.h
src/: MyEncoder.cc  drm_func.cc  encoder_api.cc  main.cc  mpi_enc_utils.cc  rga_func.cc  simple_rtmp_pusher.cc  yolo.cc
